--- a/buyforce-web/package.json
+++ b/buyforce-web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.9.2",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
